Change Log for OpenXava project
===============================

- Fix: The time part is not exported to Excel for stereotype DATETIME with a java.util.Date property.
- Fix: Filtering in list does not work for stereotype DATETIME with a java.util.Date property.
- Fix: Spanish format for dates in Excel generation, even if the locale is not Spanish.
- Fix: Some custom reports frozen in some databases, such as MS SQL Server. 
- Fix: @OrderColumn with java.util.Collection allows the user reorder when the order is not persisted.

OpenXava 5.3 (2015-5-18)
------------------------
- Charts generated automatically from list data.
- A List annotated with @OrderColumn can be sorted by the user with drag & drop.
- JPA 2.1 (JSR-338) support.
- Bean Validation 1.1 (JSR-349) support.
- Combo has no blank option in enum properties with @Required. 
- New properties startInLastVisitedModule and rememberVisitedModules in naviox.properties.
- Default controllers.xml in new projects.
- @RemoveSelectedAction available for @ElementCollection.
- New method assertValidValueExists() in ModuleTestBase.
- Hibernate upgraded to 4.3.9.
- Hibernate Validator upgraded to 5.1.3.
- HSQLDB used in sample projects upgraded to 2.3.2.
- Classic Hibernate Validator (3.1) dropped.
- Ant target updateSchema no longer supported for XML components.
- Automated Business Logic (ABL) library dropped.
- Fix: Creating a new element in a collection with @OrderColumn fails.
- Fix: Obsolete hibernate namespace. 
- Fix: Disabled dialogs using Liferay 5.1 style.
- Fix: Apostrophes in messages missing sometimes.

OpenXava 5.2.1 (2015-3-2)
-------------------------
- Methods showDialog(), closeDialog(), showNewView() and returnToPreviousView() available from OnChangePropertyBaseAction.
- New removeBlanks() method in Strings utility class.
- Entity from View has nulls for non-existing references, before they were empty objects.